--- a/templates/search_tool/index.html.twig
+++ b/templates/search_tool/index.html.twig
@@ -35,7 +35,7 @@
         </div>
 
         <div class="col-12 text-center">
-            <input class="btn btn-outline-light" value="JE LANCE MA RECHERCHE">
+            <input class="btn btn-outline-light" type="submit" value="JE LANCE MA RECHERCHE">
         </div>
 
         {{ form_end(form) }}
