--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,12 +3,12 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Utilisateur</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Utilisateur</th>
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
@@ -41,10 +41,10 @@
             </tr>
         </tbody>
     </table>
+           <a href="{{ path('user_index') }}">retour vers la liste</a>
+       
+          <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
